--- a/argocd/apps/media-server/tautulli/ingress.yaml
+++ b/argocd/apps/media-server/tautulli/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: tautulli
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: tautulli.yanello.net
       http:
