--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -7,11 +7,7 @@ image:
   pullPolicy: IfNotPresent
 ingress:
   enabled: true
-  ingressClassName: nginx
-  # annotations:
-  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-  #   nginx.org/websocket-services: "frigate"
+  ingressClassName: istio
   hosts:
     - host: frigate.yanello.net
       paths:
