--- a/argocd/apps/frigate/manifests/health-check.yaml
+++ b/argocd/apps/frigate/manifests/health-check.yaml
@@ -8,7 +8,7 @@ data:
     #!/usr/bin/env python3
     import sys
     import subprocess
-    subprocess.check_call([sys.executable, "-m", "pip", "install", "requests"])
+    #subprocess.check_call([sys.executable, "-m", "pip", "install", "requests"])
     import requests
 
     def check_camera_fps():
