--- a/argocd/apps/istio/resources/istio-vs.yaml
+++ b/argocd/apps/istio/resources/istio-vs.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: argocd-vs
+  name: frigate-vs
 spec:
   hosts:
   - frigate.yanello.net
