--- a/argocd/apps/istio/resources/istio-vs.yaml
+++ b/argocd/apps/istio/resources/istio-vs.yaml
@@ -1,33 +1,16 @@
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: argocd-vs
-spec:
-  hosts:
-  - argocd.yanello.net
-  - argocd.k8s.yanello.net
-  gateways:
-  - istio-system/kube-gateway
-  http:
-  - route:
-    - destination:
-        host: argocd-server.argocd.svc.cluster.local
-        port:
-          number: 80
-# ---
 # apiVersion: networking.istio.io/v1alpha3
 # kind: VirtualService
 # metadata:
-#   name: frigate-vs
+#   name: argocd-vs
 # spec:
 #   hosts:
-#   - frigate.yanello.net
-#   - frigate.k8s.yanello.net
+#   - argocd.yanello.net
+#   - argocd.k8s.yanello.net
 #   gateways:
 #   - istio-system/kube-gateway
 #   http:
 #   - route:
 #     - destination:
-#         host: frigate.frigate.svc.cluster.local
+#         host: argocd-server.argocd.svc.cluster.local
 #         port:
-#           number: 5000
+#           number: 80
