--- a/argocd/apps/media-server/prowlarr/deploy.yaml
+++ b/argocd/apps/media-server/prowlarr/deploy.yaml
@@ -68,8 +68,8 @@ spec:
               memory: 200Mi
       volumes:
         - name: config
-          persistentVolumeClaim:
-            claimName: config
+          hostPath:
+            path: /zpool/k8s/prowlarr/config
 ---
 apiVersion: apps/v1
 kind: Deployment
