--- a/ansible/argocd/main.yml
+++ b/ansible/argocd/main.yml
@@ -35,25 +35,25 @@
                   - name: argocd-server
                     args:
                       - /usr/local/bin/argocd-server
-                     # - --insecure
+                      - --insecure
 
-    - name: Patch argocd-server service to use LoadBalancer
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: argocd-server
-            namespace: argocd
-          spec:
-            type: LoadBalancer
-            ports:
-              - port: 80
-                targetPort: 8080
-                protocol: TCP
-                name: http
-              - port: 443
-                targetPort: 8080
-                protocol: TCP
-                name: https
+    # - name: Patch argocd-server service to use LoadBalancer
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     definition:
+    #       apiVersion: v1
+    #       kind: Service
+    #       metadata:
+    #         name: argocd-server
+    #         namespace: argocd
+    #       spec:
+    #         type: LoadBalancer
+    #         ports:
+    #           - port: 80
+    #             targetPort: 8080
+    #             protocol: TCP
+    #             name: http
+    #           - port: 443
+    #             targetPort: 8080
+    #             protocol: TCP
+    #             name: https
