--- a/argocd/apps/vaultwarden/manifests/vs.yaml
+++ b/argocd/apps/vaultwarden/manifests/vs.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: bitwarden-vs
+  name: vaultwarden-vs
 spec:
   hosts:
   - bitwarden.yanello.net
@@ -11,6 +11,6 @@ spec:
   http:
   - route:
     - destination:
-        host: bitwarden
+        host: vaultwarden
         port:
           number: 80
