--- a/argocd/apps/immich/manifests/ingress.yaml
+++ b/argocd/apps/immich/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: immich
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: immich.k8s.yanello.net
       http:
