--- a/argocd/apps/media-server/overseerr/ingress.yaml
+++ b/argocd/apps/media-server/overseerr/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: overseerr
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: overseerr.yanello.net
       http:
