--- a/argocd/apps/media-server/plex/ingress.yaml
+++ b/argocd/apps/media-server/plex/ingress.yaml
@@ -9,7 +9,7 @@
 #   annotations:
 #     nginx.ingress.kubernetes.io/app-root: /web 
 # spec:
-#   ingressClassName: nginx
+#   ingressClassName: istio
 #   rules:
 #   - host: plex.yanello.net
 #     http:
