--- a/argocd/apps/media-server/prowlarr/ingress.yaml
+++ b/argocd/apps/media-server/prowlarr/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: prowlarr
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: prowlarr.yanello.net
       http:
