--- a/argocd/apps/media-server/qbittorrent/ingress.yaml
+++ b/argocd/apps/media-server/qbittorrent/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: qbittorrent
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: qbit.yanello.net
       http:
