--- a/argocd/apps/media-server/radarr/ingress.yaml
+++ b/argocd/apps/media-server/radarr/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: radarr
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: radarr.yanello.net
       http:
