--- a/argocd/apps/media-server/sonarr/ingress.yaml
+++ b/argocd/apps/media-server/sonarr/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: sonarr
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: sonarr.yanello.net
       http:
