--- a/argocd/apps/resume/manifests/ingress.yaml
+++ b/argocd/apps/resume/manifests/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
   #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
   #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: rxresume.yanello.net
       http:
@@ -35,7 +35,7 @@ metadata:
   #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
   #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: minio.yanello.net
       http:
@@ -62,7 +62,7 @@ metadata:
   #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
   #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
 spec:
-  ingressClassName: nginx
+  ingressClassName: istio
   rules:
     - host: minio-dash.yanello.net
       http:
