--- a/argocd/apps/istio/resources/external-vs.yaml
+++ b/argocd/apps/istio/resources/external-vs.yaml
@@ -13,3 +13,18 @@ spec:
         host: marcus-server.lan
         port:
           number: 3000
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: resume-se
+  namespace: istio-system
+spec:
+  hosts:
+  - marcus-server.lan
+  ports:
+  - number: 3000
+    name: http
+    protocol: HTTP
+  resolution: DNS
+  location: MESH_EXTERNAL
