--- a/argocd/apps/immich/manifests/ingress.yaml
+++ b/argocd/apps/immich/manifests/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: istio
   rules:
-    - host: immich.k8s.yanello.net
+    - host: immich.yanello.net
       http:
         paths:
           - backend:
