--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -107,6 +107,8 @@ spec:
           volumeMounts:
             - name: photos
               mountPath: /usr/src/app/upload
+            - name: model-cache
+              mountPath: /cache
           resources:
             requests:
               nvidia.com/gpu: '1'
