--- a/argocd/apps/media-server/qbittorrent/pvc.yaml
+++ b/argocd/apps/media-server/qbittorrent/pvc.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: config
-spec:
-  storageClassName: nfs-storage
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: config
+# spec:
+#   storageClassName: nfs-storage
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 100Mi
 
