--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -35,6 +35,8 @@ service:
   type: LoadBalancer
   loadBalancerIP: 10.10.8.3
 config: |
+  tls:
+    enabled: false
   mqtt:
     host: 192.168.1.4
     port: 1883
