--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -86,6 +86,7 @@ spec:
           protocol: UDP
         - name: qbit-http
           containerPort: 8080
+          protocol: TCP
         envFrom:
         - secretRef:
             name: vpn-secrets
