--- a/argocd/apps/nextcloud/app.yaml
+++ b/argocd/apps/nextcloud/app.yaml
@@ -75,8 +75,9 @@ spec:
               passwordKey: mariadb-password
 
           mariadb:
-            enabled: tru
-            tag: '10.11'
+            enabled: true
+            image:
+              tag: '10.11'
             global:
               defaultStorageClass: local-path
             primary:
