--- a/argocd/apps/nextcloud/manifests/kustomization.yaml
+++ b/argocd/apps/nextcloud/manifests/kustomization.yaml
@@ -6,3 +6,12 @@ patches:
 
 generators:
   - ./secret-generator.yaml
+
+
+helmCharts:
+    - name: nextcloud
+      repo: https://nextcloud.github.io/helm/
+      version: "*"
+      releaseName: nextcloud
+      namespace: nextcloud
+      valuesFile: ./values.yaml
