--- a/argocd/apps/nextcloud/manifests/kustomization.yaml
+++ b/argocd/apps/nextcloud/manifests/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
   - ./vs.yaml
 
-# patches:
-# - path: ./host-network-patch.yaml
+patches:
+- path: ./host-network-patch.yaml
 
 generators:
   - ./secret-generator.yaml
