--- a/argocd/apps/nextcloud/manifests/values.yaml
+++ b/argocd/apps/nextcloud/manifests/values.yaml
@@ -9,7 +9,7 @@ nextcloud:
   host: nextcloud.yanello.net
   trustedDomains:
     - nextcloud.yanello.net
-cron:
+cronjob:
   enabled: true
 redis:
   enabled: true
