--- a/argocd/apps/istio/resources/istio-gateway.yaml
+++ b/argocd/apps/istio/resources/istio-gateway.yaml
@@ -12,8 +12,8 @@ spec:
       name: http
       number: 80
       protocol: HTTP
-    # tls:
-    #   httpsRedirect: true
+    tls:
+      httpsRedirect: true
   - port:
       number: 443
       name: https
