--- a/argocd/apps/mend-renovate/manifests/secret-generator.yaml
+++ b/argocd/apps/mend-renovate/manifests/secret-generator.yaml
@@ -2,7 +2,7 @@ apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
   # Specify a name
-  name: nextcloud-secret-generator
+  name: renovate-secret-generator
   annotations:
     config.kubernetes.io/function: |
         exec:
@@ -11,4 +11,4 @@ metadata:
           # otherwise, path should be relative to manifest files, like
           # path: ../../../ksops
 files:
-  - ./nextcloud-secret.enc.yaml
+  - ./renovate-secret.enc.yaml
