--- a/argocd/apps/mend-renovate/manifests/vs.yaml
+++ b/argocd/apps/mend-renovate/manifests/vs.yaml
@@ -1,21 +1,21 @@
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: frigate-vs
-spec:
-  hosts:
-  - nextcloud.yanello.net
-  gateways:
-  - istio-system/kube-gateway
-  http:
-  - route:
-    - destination:
-        host: nextcloud
-        port:
-          number: 8080
-      headers:
-        response:
-          set:
-            Strict-Transport-Security: max-age=15552000; includeSubDomains
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: renovate-vs
+# spec:
+#   hosts:
+#   - renovate.yanello.net
+#   gateways:
+#   - istio-system/kube-gateway
+#   http:
+#   - route:
+#     - destination:
+#         host: renovate
+#         port:
+#           number: 8080
+#       headers:
+#         response:
+#           set:
+#             Strict-Transport-Security: max-age=15552000; includeSubDomains
       
